--- a/src/styles/chatbot.module.css
+++ b/src/styles/chatbot.module.css
@@ -3,7 +3,7 @@
   padding: 30px;
 }
 
-.shadowContainer {
+.shadowWrapper {
   width: fit-content;
   height: fit-content;
   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
@@ -20,36 +20,22 @@
   overflow: hidden;
 }
 
-.header {
+.footer {
   width: 100%;
-  height: 90px;
   display: flex;
-  align-items: center;
-  background-color: #121212;
-  padding: 0px 20px;
-  gap: 10px;
+  flex-direction: column;
 }
 
-.avatar {
-  width: 40px;
-  aspect-ratio: 1;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: linear-gradient(103.37deg, #4994FF 0%, #4994FF 95.22%);
-  border-radius: 50%;
-}
-
-.name>h4 {
-  font-size: 1.2rem;
-  line-height: 1;
-  font-weight: 600;
-  color: #FAFAFA;
-  margin-bottom: 4px;
-}
-
-.name>p {
-  color: #c0c0c0;
+.footer>p {
+  text-align: center;
+  padding: 6px 0px 8px;
   font-size: 0.8rem;
+  color: rgb(155, 166, 178);
   line-height: 1;
+  background-color: rgb(249, 249, 249);
+}
+
+.footer>p>a {
+  text-decoration: none;
+  color: rgb(18, 91, 251);
 }
