--- a/src/components/message-list/styles.module.css
+++ b/src/components/message-list/styles.module.css
@@ -3,7 +3,7 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  background-color: #ECECEC;
+  background-color: #FFFFFF;
   overflow-y: scroll;
   padding-top: 10px;
 }
