--- a/src/components/message-list/styles.module.css
+++ b/src/components/message-list/styles.module.css
@@ -5,7 +5,7 @@
   flex-direction: column;
   background-color: #FFFFFF;
   overflow-y: scroll;
-  padding-top: 22px;
+  padding: 22px 0px;
 }
 
 .repliesContainer {
