--- a/src/styles/chatbot.module.css
+++ b/src/styles/chatbot.module.css
@@ -3,10 +3,10 @@
   padding: 30px;
 }
 
-.shadowWrapper {
+.shadeWrapper {
   width: fit-content;
   height: fit-content;
-  box-shadow: rgba(149, 157, 165, 0.432) 0px 8px 24px;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
   border-radius: 10px;
 }
 
