--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -13,7 +13,7 @@ body {
   width: 100%;
   height: 100%;
   font-size: 16px;
-  background-color: #EFF3F6;
+  background-color: #E9E9E9;
 }
 
 #root {
