--- a/src/components/message-list/styles.module.css
+++ b/src/components/message-list/styles.module.css
@@ -8,6 +8,22 @@
   padding: 22px 0px;
 }
 
+.wrapper::-webkit-scrollbar {
+  width: 6px;
+  height: 6px;
+}
+
+.wrapper::-webkit-scrollbar-thumb {
+  background: #06192546;
+  border: 0;
+  border-radius: 10px;
+}
+
+.wrapper::-webkit-scrollbar-track {
+  border: 0;
+  background: transparent;
+}
+
 .repliesContainer {
   width: 100%;
   display: flex;
